Movielist: Fix delete modal text not being visible in dark mode

--- a/apps/movielist/assets/css/_modal.scss
+++ b/apps/movielist/assets/css/_modal.scss
@@ -27,7 +27,8 @@
 	margin-top: auto;
 	margin-bottom: auto;
 	z-index: 2;
-	background-color: white;
+	background-color: #fff;
+	color: #000;
 	padding: 4em 2em 2em;
 	border-radius: 6px;
 	box-shadow: 0 5px 15px rgba(0,0,0,.5);
